# Piezo-Driving-for-esp32

./: CMakeLists.txt  compareFreq.md  generator  generator.cpp  generator.cs  log.md  partitions.csv  sdkconfig  sdkconfig.old
components/SPI/: CMakeLists.txt
main/: CMakeLists.txt  IoExpander.cpp  IoExpander.h  advSensing.cpp  convert.py  data.h  driving.cpp  driving_test.cpp  example.h  functions.h  gpioEx.cpp  gpioEx.h  ledEx.cpp  ledEx.h  main.cpp  main.h  parse  parse.cpp  sensing.cpp  spi.cpp  spi.h  stm32f4xx_hal_conf.h  stm32f4xx_hal_msp.c  syscalls.cpp  timeEx.cpp  timeEx.h  utils.cpp  utils.h  wave.json
